# cotdantic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
.pre-commit-scripts/: increment_version.py
app/: app.py  cot.py
cot_dantic/: pyproject.toml
cot_dantic/src/cotdantic/: cot_types.py  multicast.py
cot_dantic/tests/: test_lossless.py
coursor_on_target/: __init__.py  converters.py  listener.py  models.py  multicast.py  server.py
src/cotdantic/: __init__.py  __version__.py  collector.py  converters.py  cot_types.py  cotdantic.py  datapack.py  listener.py  models.py  multicast.py  templates.py  utilities.py  windows.py
src/coursor_on_target/: __init__.py  converters.py  models.py  multicast.py
tests/: reproducable.py  test_datapack.py  test_lossless.py  test_suite.py
