[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cotdantic"
version = "0.1.2"
requires-python = ">=3.7"
authors = [{ name="Raub Camaioni"}]
maintainers = [{ name="Raub Camaioni"}]
description = "Pythonic coursor-on-target xml/protobuf generation using pydantic"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cot", "coursor", "target"]

dependencies = [
    "takproto>=3.0.0",
    "pydantic_xml>=2.0.0",
    "lxml>=5.3.0"
]

[project.optional-dependencies]
testing = ["pytest>=6.2.4"]

[project.scripts]
cot-listener = "cotdantic:cot_listener"