[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cotdantic"
version = "1.0.0"
requires-python = ">=3.7"
authors = [{ name="Raub Camaioni"}]
maintainers = [{ name="Raub Camaioni"}]
description = "Pythonic coursor-on-target xml/protobuf generation using pydantic"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cot", "coursor", "target"]

dependencies = [
    "takproto>=3.0.0",
    "pydantic_xml>=2.0.0",
    "lxml>=5.3.0"
]

[project.optional-dependencies]
testing = ["pytest>=6.2.4"]
dev = ["pytest>=6.2.4", "pre-commit"]

[project.scripts]
cot-listener = "cotdantic.listener:cot_listener"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true